added code to replicate fig 1 of paper

--- a/notebooks/SARS_CoV_2_experiment.ipynb
+++ b/notebooks/SARS_CoV_2_experiment.ipynb
@@ -145,7 +145,7 @@
     "positions = np.array([int(x.split('_')[0]) for x in X_colnames])\n",
     "new_bp = np.array([x.split('_')[1] for x in X_colnames])\n",
     "\n",
-    "with open(\"data/Covid19/sequence.fasta\") as handle:\n",
+    "with open(\"data/Covid19/NC_045512.2_sequence.fasta\") as handle:\n",
     "    for record in SeqIO.parse(handle, \"fasta\"):\n",
     "        print(record.id)\n",
     "orig_bp = [record.seq[pos] for pos in positions]"
